# include_directories(include_directories(${PROJECT_SOURCE_DIR}/lcd))
# include_directories(include_directories(${PROJECT_SOURCE_DIR}/graph))


# 设置库文件
add_library(event0 event0.c)
# target_include_directories(fontset PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

# 导入头文件目录
# target_include_directories(graph PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
